<resources>
    <string name="app_name">LotoTzahi V0.2</string>
    <string name="num1">0</string>
    <string name="num2">0</string>
    <string name="num3">0</string>
    <string name="num4">0</string>
    <string name="num5">0</string>
    <string name="num6">0</string>
    <string name="numStrong">0</string>
    <string name="btnRun">צור צירוף</string>
    <string name="btnAdd">הוסף צירוף</string>
    <string name="btnShow">הצג צירופים</string>
</resources>
